Projet GL/test/src/test/deca/syntax/invalid/bad_readInt_2.res
src/test/deca/syntax/invalid/bad_readInt_2.deca:11:11: mismatched input ';' expecting '('
